Fix: User Based Auth