@@ -2,19 +2,16 @@ package com.example.BazaarTrackerBackend.service.expense;
 
 import com.example.BazaarTrackerBackend.dto.expense.ExpenseRequest;
 import com.example.BazaarTrackerBackend.dto.expense.ExpenseResponse;
-
+import com.example.BazaarTrackerBackend.exception.CustomException;
 import com.example.BazaarTrackerBackend.mapper.ExpenseMapper;
-
 import com.example.BazaarTrackerBackend.model.entity.Expense;
-
 import com.example.BazaarTrackerBackend.repository.firestore.FirestoreRepository;
-
 import com.example.BazaarTrackerBackend.constants.CollectionNames;
-
+import com.example.BazaarTrackerBackend.service.dashboard.DashboardService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import java.time.LocalDateTime;
+import org.springframework.security.core.context.SecurityContextHolder;
+import com.google.cloud.Timestamp;
 import java.util.List;
 
 @Service
@@ -23,48 +20,56 @@ public class ExpenseService {
     @Autowired
     private FirestoreRepository firestoreRepository;
 
+    @Autowired
+    private DashboardService dashboardService;
+
     private static final String COLLECTION = CollectionNames.EXPENSES;
 
-    // ✅ CREATE EXPENSE
+    private String getCurrentUserId() {
+        return SecurityContextHolder.getContext().getAuthentication().getName();
+    }
+
     public ExpenseResponse createExpense(ExpenseRequest request) throws Exception {
 
-        // ⚠️ Step 1: Validate
         if (request.getAmount() <= 0) {
-            throw new RuntimeException("Expense amount must be greater than 0");
+            throw new CustomException("Expense amount must be greater than 0", 400);
         }
 
-        if (request.getCategory() == null || request.getCategory().isBlank()) {
-            throw new RuntimeException("Expense category is required");
+        if (request.getCategory() == null || request.getCategory().trim().isEmpty()) {
+            throw new CustomException("Expense category is required", 400);
         }
 
-        // ⚠️ Step 2: Map to entity
         Expense expense = ExpenseMapper.toEntity(request);
 
-        expense.setCreatedAt(LocalDateTime.now());
-        expense.setUpdatedAt(LocalDateTime.now());
+        String userId = getCurrentUserId();
+        expense.setUserId(userId);
+        expense.setCreatedAt(Timestamp.now());
+        expense.setUpdatedAt(Timestamp.now());
 
-        // ⚠️ Step 3: Save
         Expense saved = firestoreRepository.save(COLLECTION, expense);
+
+        // Update Dashboard
+        dashboardService.recordExpense(userId, request.getAmount());
 
         return ExpenseMapper.toResponse(saved);
     }
 
-    // ✅ GET ALL EXPENSES
     public List<ExpenseResponse> getAllExpenses() throws Exception {
-
-        return firestoreRepository.findAll(COLLECTION, Expense.class)
+        return firestoreRepository.findByField(COLLECTION, "userId", getCurrentUserId(), Expense.class)
                 .stream()
                 .map(ExpenseMapper::toResponse)
                 .toList();
     }
 
-    // ✅ GET EXPENSE BY ID
     public ExpenseResponse getExpenseById(String id) throws Exception {
-
         Expense expense = firestoreRepository.findById(COLLECTION, id, Expense.class);
 
         if (expense == null) {
-            throw new RuntimeException("Expense not found");
+            throw new CustomException("Expense not found", 404);
+        }
+
+        if (expense.getUserId() == null || !expense.getUserId().equals(getCurrentUserId())) {
+            throw new CustomException("Unauthorized access", 403);
         }
 
         return ExpenseMapper.toResponse(expense);
